# multi-model-ensemble

./: .gitignore  BUILD.md  PROVIDER_PERSISTENCE.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/agent-memory/researcher/: MEMORY.md  project_cli_flags.md  project_multi_model_ensemble.md
.claude/plans/: plan.md  research.md
.plans/: m1_handoff_prompt.md  m2_handoff_prompt.md  m3_handoff_prompt.md  m4_handoff_prompt.md  plan.md  research.md  research_gemini.md  tauri_v2_scaffolding.md
architecture/: diagram.d2
docs/: decisions.md  init.md  requirements.md  v1_research.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/agent-memory/reviewer/: MEMORY.md  project_milestone2.md
src-tauri/capabilities/: default.json
src-tauri/src/: context.rs  lib.rs  perspectives.rs
src-tauri/src/commands/: mod.rs  providers.rs  runs.rs  sessions.rs  synthesis.rs
src-tauri/src/orchestrator/: events.rs  mod.rs  types.rs
src-tauri/src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs  types.rs
src-tauri/src/session_store/: layout.rs  metadata.rs  mod.rs  safe_paths.rs
src-tauri/src/synthesis/: brief.rs  evidence.rs  fixtures.rs  mod.rs  normalize.rs  strategies.rs  types.rs
src/__tests__/: App.test.tsx  BriefView.test.tsx  RunComposer.test.tsx
src/features/artifact-viewer/: ArtifactViewer.tsx  brief-prose.css
src/features/artifact-viewer/components/: BriefToC.tsx  CodeBlock.tsx
src/features/run-composer/: RunComposer.tsx
src/lib/: api.ts  types.ts
